--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dokumentasi Ekspedisi | RT 002 United - Malang Vibe</title>
+    <title>Dokumentasi Ekspedisi | RT 002 United - Malang Vibes</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
@@ -33,7 +33,7 @@
 
     <section id="overview" class="hero-section">
         <div class="hero-content">
-            <h2>DOKUMENTASI EKSPEDISI MALANG</h2>
+            <h1 class="main-title">DOKUMENTASI EKSPEDISI MALANG</h1>
             <h2 class="sub-hero">KELOMPOK RT 002 UNITED, KELAS 9 SMPIP BAITUL MAAL</h2>
             <div class="badge-date">10 - 14 NOVEMBER 2025</div>
             
