--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="overview" class="hero-section">
         <div class="hero-content">
             <h1 class="main-title">DOKUMENTASI EKSPEDISI MALANG</h1>
-            <h2 class="sub-hero">KELOMPOK RT 002 UNITED, KELAS 9 SMPIP BAITUL MAAL</h2>
+            <p class="sub-hero">KELOMPOK RT 002 UNITED, KELAS 9 SMPIP BAITUL MAAL</p>
             <div class="badge-date">10 - 14 NOVEMBER 2025</div>
             
             <a href="https://docs.google.com/document/d/1AnGFSg3tQl3Wc8lYljcnSnB9_ujhH68Q/view" target="_blank" class="action-button">
