--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <div class="galeri-grid">
                 
                 <div class="galeri-item"><img src="images/BaseCamp.jpg" alt="Foto Base Camp Desa Pujon Lor"></div>
-                <div class="galeri-item"><img src="images/Kampung Warna-Warni 10.jpg" alt="Foto di Jembatan Kampung Warna-Warni"></div>
+                <div class="galeri-item"><img src="images/Kampung Warna-Warni 10.jpg" alt="Foto Jembatan Kampung Warna-Warni"></div>
                 <div class="galeri-item"><img src="images/Kampung Warna-Warni 9.jpg" alt="Foto Grup di Kampung Warna-Warni"></div>
                 <div class="galeri-item"><img src="images/Kampung Warna-Warni 8.jpg" alt="Foto Sudut Kampung Warna-Warni"></div>
                 <div class="galeri-item"><img src="images/Kampung Warna-Warni 7.jpg" alt="Foto Pemandangan Kampung Warna-Warni"></div>
